force-app/main/default/objects/ASL__AssureSign_Envelope__c/ASL__AssureSign_Envelope__c.object-meta.xml
<CustomObject>
    <label>AssureSign Envelope</label>
    <nameField>
        <displayFormat>ASE-{000000000}</displayFormat>
        <label>Envelope Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AssureSign Envelopes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>