force-app/main/default/objects/ASL__AssureSign_Envelope__c/fields/ASL__Account__c.field-meta.xml
<CustomField>
    <fullName>ASL__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AssureSign Envelopes</relationshipLabel>
    <relationshipName>AssureSign_Envelopes</relationshipName>
    <type>Lookup</type>
</CustomField>