force-app/main/default/objects/ASL__AssureSign_Envelope__c/fields/ASL__Case__c.field-meta.xml
<CustomField>
    <fullName>ASL__Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>AssureSign Envelopes</relationshipLabel>
    <relationshipName>AssureSign_Envelopes</relationshipName>
    <type>Lookup</type>
</CustomField>