force-app/main/default/objects/ASL__AssureSign_Envelope__c/fields/ASL__Contact__c.field-meta.xml
<CustomField>
    <fullName>ASL__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>AssureSign Envelopes</relationshipLabel>
    <relationshipName>AssureSign_Envelopes</relationshipName>
    <type>Lookup</type>
</CustomField>