force-app/main/default/objects/ASL__AssureSign_Envelope__c/fields/ASL__Envelope_ID__c.field-meta.xml
<CustomField>
    <fullName>ASL__Envelope_ID__c</fullName>
    <label>AssureSign Envelope ID</label>
    <length>52</length>
    <type>Text</type>
</CustomField>