force-app/main/default/objects/ASL__AssureSign_Envelope__c/fields/ASL__Envelope_Status__c.field-meta.xml
<CustomField>
    <fullName>ASL__Envelope_Status__c</fullName>
    <formula>CASE(ASL__Status__c, &apos;created&apos;, &apos;Created&apos;, 
						            &apos;in_Progress&apos;, &apos;In Progress&apos;,
						            &apos;completed&apos;, &apos;Completed&apos;, 
						            &apos;expired&apos;, &apos;Expired&apos;,
						            &apos;declined&apos;, &apos;Declined&apos;, 
						            &apos;cancelled&apos;, &apos;Cancelled&apos;,
						            &apos;staled&apos;, &apos;Staled&apos;,
						            &apos;signer_Authentication_Failed&apos;, &apos;Signer Authentication Failed&apos;, &apos;&apos;)</formula>
    <label>Envelope Status</label>
    <type>Text</type>
</CustomField>