force-app/main/default/objects/ASL__AssureSign_Envelope__c/fields/ASL__Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>ASL__Expiration_Date__c</fullName>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>