force-app/main/default/objects/ASL__AssureSign_Envelope__c/fields/ASL__Lead__c.field-meta.xml
<CustomField>
    <fullName>ASL__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>AssureSign Envelopes</relationshipLabel>
    <relationshipName>AssureSign_Envelopes</relationshipName>
    <type>Lookup</type>
</CustomField>