force-app/main/default/objects/ASL__AssureSign_Envelope__c/fields/ASL__Name__c.field-meta.xml
<CustomField>
    <fullName>ASL__Name__c</fullName>
    <label>Label</label>
    <length>128</length>
    <type>Text</type>
</CustomField>