force-app/main/default/objects/ASL__AssureSign_Envelope__c/fields/ASL__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>ASL__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>AssureSign Envelopes</relationshipLabel>
    <relationshipName>AssureSign_Envelopes</relationshipName>
    <type>Lookup</type>
</CustomField>