force-app/main/default/objects/ASL__AssureSign_Envelope__c/fields/ASL__Originating_User_s_Configuration__c.field-meta.xml
<CustomField>
    <fullName>ASL__Originating_User_s_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The AssureSign Configuration of the originating user who creates the AssureSign Envelope</description>
    <inlineHelpText>The AssureSign Configuration of the originating user who creates the AssureSign Envelope</inlineHelpText>
    <label>Originating User&apos;s Configuration</label>
    <referenceTo>ASL__AssureSign_Configuration__c</referenceTo>
    <relationshipLabel>AssureSign Envelopes</relationshipLabel>
    <relationshipName>AssureSign_Envelopes</relationshipName>
    <type>Lookup</type>
</CustomField>