force-app/main/default/objects/ASL__AssureSign_Envelope__c/fields/ASL__Status__c.field-meta.xml
<CustomField>
    <fullName>ASL__Status__c</fullName>
    <label>Envelope Status Code</label>
    <length>52</length>
    <type>Text</type>
</CustomField>