force-app/main/default/objects/ASL__AssureSign_Envelope__c/listViews/ASL__All.listView-meta.xml
<ListView>
    <fullName>ASL__All</fullName>
    <columns>NAME</columns>
    <columns>ASL__Envelope_ID__c</columns>
    <columns>ASL__Name__c</columns>
    <columns>ASL__Envelope_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>